// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component -> Cube should render the Cube in completed state without throwing an error 1`] = `
<div
  className="styles__Container-sc-1pkazdd-0 kLgLvx"
>
  <div
    className="styles__Polygon-sc-1pkazdd-1 cOAgyo"
  >
    <div
      className="styles__Side-sc-1pkazdd-2 sc-EHOje igWgTe"
    />
    <div
      className="styles__Side-sc-1pkazdd-2 sc-bdVaJa YbtAZ"
    />
    <div
      className="styles__Side-sc-1pkazdd-2 sc-bxivhb fMiokd"
    />
    <div
      className="styles__Side-sc-1pkazdd-2 sc-ifAKCX jTzMbf"
    />
    <div
      className="styles__Side-sc-1pkazdd-2 sc-htpNat bbNfRH"
    />
    <div
      className="styles__Side-sc-1pkazdd-2 sc-bwzfXH bMXNAR"
    />
  </div>
</div>
`;

exports[`Component -> Cube should render the Cube in loading state without throwing an error 1`] = `
<div
  className="styles__Container-sc-1pkazdd-0 efwEYC"
>
  <div
    className="styles__Polygon-sc-1pkazdd-1 cOAgyo"
  >
    <div
      className="styles__Side-sc-1pkazdd-2 sc-EHOje igWgTe"
    />
    <div
      className="styles__Side-sc-1pkazdd-2 sc-bdVaJa YbtAZ"
    />
    <div
      className="styles__Side-sc-1pkazdd-2 sc-bxivhb fMiokd"
    />
    <div
      className="styles__Side-sc-1pkazdd-2 sc-ifAKCX jTzMbf"
    />
    <div
      className="styles__Side-sc-1pkazdd-2 sc-htpNat bbNfRH"
    />
    <div
      className="styles__Side-sc-1pkazdd-2 sc-bwzfXH bMXNAR"
    />
  </div>
</div>
`;
